--- a/Progress.Sitefinity.Translations.MicrosoftMachineTranslatorConnector.Tests/packages.config
+++ b/Progress.Sitefinity.Translations.MicrosoftMachineTranslatorConnector.Tests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Telerik.Sitefinity.Translations" version="12.1.7100" targetFramework="net472" />
 </packages>
