--- a/Progress.Sitefinity.Translations.MicrosoftMachineTranslatorConnector/packages.config
+++ b/Progress.Sitefinity.Translations.MicrosoftMachineTranslatorConnector/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Telerik.Sitefinity.Translations" version="12.1.7100" targetFramework="net472" />
 </packages>
